# VLIW-Retargetable-Compiler-Backend

./: .gitignore  CMakeLists.txt  README.md  compile_basic_example.sh  compile_example.sh  format.sh  generateDocumentation.sh
Processor/: DMAAddrConfig.h  PhysicalRegisterModel.cpp  PhysicalRegisterModel.h  ProcessorConfiguration.h
conf/: README.md  assembly.asm  base.xml  mlweights.txt  processor-config.xml
export/: ScheduledMOCharacteristics.cpp  ScheduledMOCharacteristics.h
header/: CompilerContext.h  Constants.h  DoubleRegister.cpp  DoubleRegister.h  InstructionCounter.h  MI.h  ML_schedule.h  MO.h  Origin.h  Parallel.h  Printer.h  Program.h  SLM.h  WeightImport.h  assembler.h  functionalunit.h  ga_stats.h  gen_merging.h  gen_register.h  gen_sched.h  global.h  label.h  listsearch.h  memory.h  moai_special.h  operation.h  opts.h  portOptimalReg.h  processor.h  rdg.h  readFile.h  register.h  sched_ga_stats.h  sched_stats.h  utility.h  vectorunit.h  virtual_reg.h
header/AssemblerParser/: IssueSlotChecker.h
header/EnergyRegisterAllocation/: CombineReturn.h  CombineSelection.h  EnergyAllocation.h  EnergyChromosome.cpp  EnergyChromosome.h  EnergyGene.cpp  EnergyGene.h  GenerationManager.cpp  GenerationManager.h  PopulationEnergyAllocation.cpp  PopulationEnergyAllocation.h  RegisterLivelihood.cpp  RegisterLivelihood.h  VirtualReg.h  deserializer.h
header/EnergyRegisterAllocation/graph/: Cluster.h
header/Utility/: HexUtility.h  compatibility.h
header/rapidxml-1.13/: manual.html  rapidxml.hpp
powerEstimation/: CMakeLists.txt  CSVReader.h  Estimator.h  InstructionModel.cpp  InstructionModel.h  ModelImporter.cpp  ModelImporter.h  TestInstructionModel.cpp  TransitionEnergyEstimator.cpp  TransitionEnergyEstimator.h  main.cpp
src/: CompilerContext.cpp  MI.cpp  MO.cpp  Origin.cpp  Printer.cpp  Program.cpp  SLM.cpp  assembler.cpp  debinary.c  functionalunit.cpp  ga_stats.cpp  gen_merging.cpp  gen_register.cpp  gen_scheduling.cpp  global.cpp  label.cpp  listsearch.cpp  main.cpp  memory.cpp  moai_special.cpp  operation.cpp  optimizer.cpp  opts.cpp  portOptimalReg.cpp  processor.cpp  rdg.cpp  readFile.cpp  register.cpp  sched_ga_stats.cpp  sched_stats.cpp  utility.cpp  vectorunit.cpp  virtual_reg.cpp
src/AssemblerParser/: IssueSlotChecker.cpp
src/Utility/: HexUtility.cpp
